--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,5 +5,55 @@
     --cor2: #000000;
     --cor3: #49a09d; 
     --cor4: #5f2c82;
+    --cor5: rgba(0, 0, 0, 0.450);
 }
 
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    margin: 0px;
+    padding: 0px;
+
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: var(--cor4);
+    
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    height: 100vh;
+    width: 100vw;
+
+    position: relative;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px var(--cor5);
+    background-color: var(--cor1);
+}
+
+section#login > div#imagem {
+    display: block;
+    background: var(--cor4) url('../imagens/metal.jpg') no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+
+section#login div#formulario {
+    display: block;
+    padding: 10px;
+}
