--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,7 +8,7 @@
     --cor5: rgba(0, 0, 0, 0.450);
 }
 
-
+/*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     body {
@@ -31,6 +31,7 @@
     }
 }
 
+/*TELAS GRANDES*/
 @media screen and (min-width: 992px) {
 
     body {
@@ -42,13 +43,21 @@
     }
 
     section#login div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login div#formulario {
-        float: right; 
+        float: left; 
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
