--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -17,6 +17,7 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login div#imagem {
@@ -29,6 +30,15 @@
         float: right; 
         width: 70%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: .9em;
+        
+    }
 }
 
 /*TELAS GRANDES*/
@@ -40,6 +50,7 @@
 
     section#login {
         width: 990px;
+        height: 350px;
     }
 
     section#login div#imagem {
@@ -58,6 +69,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        
     }
 }
