--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,54 +9,50 @@
 }
 
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-    margin: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
-
+    margin: 0px;
     box-sizing: border-box;
 }
 
 body, html {
     background-color: var(--cor4);
-    
     height: 100vh;
     width: 100vw;
 }
 
 main {
+    position: relative;
     height: 100vh;
     width: 100vw;
-
-    position: relative;
 }
 
 section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
+    background-color: var(--cor1);
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px var(--cor5);
-    background-color: var(--cor1);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background: var(--cor4) url('../imagens/metal.jpg') no-repeat;
+    background: var(--cor4) url(../imagens/metal.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
 }
 
-section#login div#formulario {
+section#login > div#formulario {
     display: block;
     padding: 10px;
 }
@@ -64,9 +60,90 @@ section#login div#formulario {
 div#formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
-
+    color: var(--cor4);
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+    text-align: justify;
+    width: 100%;
+    margin: auto;
+    padding-bottom: 5px;
+
+}
+
+form > div.campo {
+    background-color: var(--cor4);
+    border: 2px solid var(--cor5);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: var(--cor1);
+    font-size: 1.9em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: var(--cor1);
+    font-size: 1em;
+    text-align: center;
+    width: calc(100% - 55px);
+    height: 80%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+}
+
+div.campo > input:focus-within {
+    background-color: var(--cor1);
+    border: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor3);
+    color: var(--cor1);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: var(--cor3);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: var(--cor1);
+    color: var(--cor3);
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    color: var(--cor4);
+}
+
+form > a.botao > i {
     font-size: 0.8em;
 }
